Fix to whitespace issues with heart images

--- a/css/styles.css
+++ b/css/styles.css
@@ -162,3 +162,8 @@ button {
   color: var(--color-lose);
 }
 
+/*Scoreboard*/
+.tries {
+  padding-left: 2px;
+  padding-right: 2px;
+}
